syntax = "proto3";

package dylk;

// -------------------------------------------------------------------------
// The Statuses service definition.
service Statuses {
  rpc ListStatuses   (StatusParams)      returns (StatusListResponse)     {}
}

message Status {
  int32 id      = 1;
  string code   = 2;
  string title  = 3;
}

message StatusParam {
  string name  = 1;
  string value = 2;
}

message StatusParams {
  repeated StatusParam paramList     = 1;
  repeated StatusParam pageParamList = 2;
}

message StatusListResponse {
  int32 returnCode             = 1;
  string returnMessage         = 2;
  repeated Status statusList   = 3;
  int32 totalItems             = 4;
  int32 totalPages             = 5;
}
