syntax = "proto3";

package dylk;

// -------------------------------------------------------------------------
// The Vouchers service definition.
service Vouchers {
  rpc AlterVoucher   (Voucher)            returns (VoucherGeneralResponse)  {}
  rpc ListVouchers   (VoucherParams)      returns (VoucherListResponse)     {}
  rpc GetVoucher     (VoucherId)          returns (VoucherResponse)         {}
  rpc DoSalidasEquipoValeCompleto (VoucherIdList) returns (VoucherGeneralResponse) {}
}

message Item {
  string equipmentCode = 1;
  int32 quantity       = 2;
}

message PatioVoucher {
  int32  id                  = 1;
  int32  voucherId           = 2;
  string patioCode           = 3;
  string observations        = 4;
  string deliveredBy         = 5;
  string receivedBy          = 6;
  string status              = 7;
  repeated Item itemList     = 8;
}

message Incidence {
  int32  id                  = 1;
  int32  voucherId           = 2;
  string platform            = 3;
  string carrierCode         = 4;
  string patioCode           = 5;
  string observations        = 6;
  string unitCode            = 7;
  string inspectedBy         = 8;
  string operator            = 9;
  string status              = 10;
  repeated Item itemList     = 11;
}

message Event {
  double timestamp          = 1;
  string document           = 2;
  int32 documentId          = 3;
  string operation          = 4;
  string platform           = 5;
  string patioCode          = 6;
  string observations       = 7;
  string unitCode           = 8;
  string originUser         = 9;
  string targetUser         = 10;
  string status             = 11;
  repeated Item itemList    = 12;
}

message Voucher {
  int32  id                              = 1;
  string platform                        = 2;
  string carrierCode                     = 3;
  string patioCode                       = 4;
  string observations                    = 5;
  string unitCode                        = 6;
  string deliveredBy                     = 7;
  string receivedBy                      = 8;
  string status                          = 9;
  repeated Item itemList                 = 10;
  repeated PatioVoucher patioVoucherList = 11;
  repeated Incidence incidenceList       = 12;
  repeated Event eventList               = 13;
  double generationTime                  = 14;
  double lastTouchTime                   = 15;
}

message VoucherId {
  int32 id = 1;
}

message VoucherIdList {
  repeated int32 ids = 1;
}

message VoucherParam {
  string name  = 1;
  string value = 2;
}

message VoucherParams {
  repeated VoucherParam paramList     = 1;
  repeated VoucherParam pageParamList = 2;
}

message VoucherResponse {
  int32 returnCode       = 1;
  string returnMessage   = 2;
  Voucher voucher        = 3;
}

message VoucherListResponse {
  int32 returnCode             = 1;
  string returnMessage         = 2;
  repeated Voucher voucherList = 3;
  int32 totalItems             = 4;
  int32 totalPages             = 5;
}

message VoucherGeneralResponse {
  int32 returnCode     = 1;
  string returnMessage = 2;
}
